#最低版本
CMAKE_MINIMUM_REQUIRED(VERSION 3.5)
#项目信息
PROJECT(cx)
#头文件目录
#include_directories(src)
#查找当前目录下所有源文件
#并将文件名保存在DIR_SOURECE
AUX_SOURCE_DIRECTORY(. DIR_SOURCE)
#指定生成目标
#ADD_SUBDIRECTORY(src)
SET(CMAKE_BUILD_TYPE "Debug")
set(CMAKE_CXX_STANDARD 11)
set(CMAKE_CXX_STANDARD_REQUIRED True)
SET(CMAKE_C_COMPILER emcc)
SET(CMAKE_CPP_COMPILER 'em++')

set(CMAKE_CXX_FLAGS "--bind")
set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} -s WASM=1 -s EXTRA_EXPORTED_RUNTIME_METHODS='[FS]' -s INITIAL_MEMORY=268435456 \
    -s ASSERTIONS=1 \
    -s STACK_OVERFLOW_CHECK=2 \
    -s PTHREAD_POOL_SIZE_STRICT=2 \
    -s ALLOW_MEMORY_GROWTH=1 \
    -lidbfs.js")

ADD_EXECUTABLE(app ${DIR_SOURCE})
